--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Champtont/BackEnd-M1_D2_HW#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "atob": "^2.1.2",
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -30,9 +32,11 @@
     "fs-extra": "^11.1.0",
     "http-errors": "^2.0.0",
     "json2csv": "^5.0.7",
+    "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "pdfmake": "^0.2.7",
+    "query-to-mongo": "^0.10.2",
     "request": "^2.88.2",
     "swagger-ui-express": "^4.6.0",
     "uniqid": "^5.4.0",
